<resources>
    <string name="app_name">UandesGo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="angeles_aldunate">Ángeles Aldunate</string>
    <string name="sample_address">El Frutal 4537, Lo Barnechea</string>
    <string name="sample_career">Ingeniería</string>
    <string name="sample_email">adaldunate@miuandes.cl</string>
    <string name="Norte">Norte</string>
    <string name="Nororiente">Oriente</string>
    <string name="Norponiente">Norponiente</string>
    <string name="Centro">Centro</string>
    <string name="Sur">Sur</string>
    <string name="Suroriente">Suroriente</string>
    <string name="Surponiente">Surponiente</string>
    <string name="destinos">Destinos</string>
    <string name="sector">Sector</string>
    <string name="vuelvo">Vuelvo</string>
    <string name="voy">Voy</string>
    <string name="direcci_n">Dirección</string>
    <string name="pide_un_avent_n">Pide un aventón</string>
    <string name="a_donde_vas">¿A dónde vas?</string>
    <string name="capacity">Capacidad</string>
    <string name="asientos_disponibles">Asientos Disponibles</string>
    <string name="number">+56999999999</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="uandes">UAndes</string>
    <string name="escuela_militar">Escuela Militar</string>
    <string name="voy_a_la_uandes">Voy a la UAndes</string>
    <string name="salgo_desde_la_uandes">Salgo desde la UAndes</string>
    <string name="editar">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
    <string-array name="Sectors">
        <item>@string/Nororiente</item>
    </string-array>
</resources>
