<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.angeles.uandesgo.CreateRouteFragment">


    <TextView
        android:id="@+id/textView_title_create_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/capriola"
        android:text="@string/pide_un_avent_n"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_create_route">

        <TextView
            android:id="@+id/textView_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola"
            android:text="@string/direcci_n"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView_title_create_route"
            tools:layout_editor_absoluteX="52dp">
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_going"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/capriola"
                    android:text="@string/voy"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radioButton_leaving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/capriola"
                    android:text="@string/vuelvo"
                    android:textSize="14sp" />

            </RadioGroup>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_sector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_create_route">

        <TextView
            android:id="@+id/textView_sector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola"
            android:text="@string/sector"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_sectors"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:entries="@array/Sectors"
            android:spinnerMode="dialog"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_destinations"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/capriola"
        android:text="@string/destinos"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_direction" />

    <ListView
        android:id="@+id/list_destinations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/textView_destinations">
    </ListView>


</android.support.constraint.ConstraintLayout>
